--- a/src/optionals/bjack/dune
+++ b/src/optionals/bjack/dune
@@ -3,5 +3,4 @@
  (libraries bjack liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules bjack_in bjack_out))
+ (optional))
