--- a/src/optionals/graphics/dune
+++ b/src/optionals/graphics/dune
@@ -3,5 +3,4 @@
  (libraries graphics liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules graphics_out))
+ (optional))
