--- a/src/optionals/speex/dune
+++ b/src/optionals/speex/dune
@@ -3,5 +3,4 @@
  (libraries speex speex.decoder liquidsoap_core liquidsoap_ogg)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules liq_speex_decoder speex_encoder))
+ (optional))
