--- a/src/optionals/ssl/dune
+++ b/src/optionals/ssl/dune
@@ -3,5 +3,4 @@
  (libraries ssl liquidsoap_core liquidsoap_builtins)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules ssl_base builtins_ssl))
+ (optional))
