--- a/src/optionals/fdkaac/dune
+++ b/src/optionals/fdkaac/dune
@@ -3,5 +3,4 @@
  (libraries fdkaac liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules fdkaac_encoder))
+ (optional))
