--- a/src/optionals/flac/dune
+++ b/src/optionals/flac/dune
@@ -3,5 +3,4 @@
  (libraries flac liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules liq_flac_decoder flac_encoder))
+ (optional))
