--- a/src/optionals/irc/dune
+++ b/src/optionals/irc/dune
@@ -3,5 +3,4 @@
  (libraries irc-client-unix liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules builtins_irc))
+ (optional))
