--- a/src/optionals/jemalloc/dune
+++ b/src/optionals/jemalloc/dune
@@ -3,5 +3,4 @@
  (libraries jemalloc liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules builtins_jemalloc))
+ (optional))
