--- a/src/optionals/ogg/dune
+++ b/src/optionals/ogg/dune
@@ -3,5 +3,4 @@
  (libraries ogg ogg.decoder liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules ogg_muxer ogg_encoder liq_ogg_decoder))
+ (optional))
