--- a/src/optionals/opus/dune
+++ b/src/optionals/opus/dune
@@ -3,5 +3,4 @@
  (libraries opus opus.decoder liquidsoap_core liquidsoap_ogg)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules liq_opus_decoder opus_encoder))
+ (optional))
