--- a/src/optionals/posix_time/dune
+++ b/src/optionals/posix_time/dune
@@ -3,5 +3,4 @@
  (libraries posix-time2 liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules liq_posix_time))
+ (optional))
