--- a/src/optionals/samplerate/dune
+++ b/src/optionals/samplerate/dune
@@ -3,5 +3,4 @@
  (libraries samplerate liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules libsamplerate_converter))
+ (optional))
