--- a/src/optionals/soundtouch/dune
+++ b/src/optionals/soundtouch/dune
@@ -3,5 +3,4 @@
  (libraries soundtouch liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules soundtouch_op st_bpm))
+ (optional))
