--- a/src/optionals/sqlite/dune
+++ b/src/optionals/sqlite/dune
@@ -3,5 +3,4 @@
  (libraries sqlite3 liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules builtins_sqlite))
+ (optional))
