--- a/src/optionals/stereotool/dune
+++ b/src/optionals/stereotool/dune
@@ -3,5 +3,4 @@
  (libraries stereotool liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules stereotool_op))
+ (optional))
