--- a/src/optionals/theora/dune
+++ b/src/optionals/theora/dune
@@ -3,5 +3,4 @@
  (libraries theora theora.decoder liquidsoap_core liquidsoap_ogg)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules liq_theora_decoder theora_encoder))
+ (optional))
