--- a/src/optionals/xmlplaylist/dune
+++ b/src/optionals/xmlplaylist/dune
@@ -3,5 +3,4 @@
  (libraries xmlplaylist liquidsoap_core liquidsoap_builtins)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules playlist_xml))
+ (optional))
