--- a/src/optionals/yaml/dune
+++ b/src/optionals/yaml/dune
@@ -3,5 +3,4 @@
  (libraries yaml liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
- (optional)
- (modules builtins_yaml))
+ (optional))
