Also remove all modules from src/lang/dune

--- a/src/lang/dune
+++ b/src/lang/dune
@@ -89,73 +89,4 @@
   str
   unix
   menhirLib
-  xml-light)
- (modules
-  build_config
-  builtins_bool
-  builtins_eval
-  builtins_getter
-  builtins_json
-  builtins_lang
-  builtins_list
-  builtins_math
-  builtins_null
-  builtins_profiler
-  builtins_regexp
-  builtins_string
-  builtins_yaml
-  builtins_xml
-  builtins_ref
-  cache
-  doc
-  environment
-  error
-  evaluation
-  extralib
-  flags
-  hooks
-  json_base
-  json_lexer
-  json_parser
-  json
-  lang
-  lang_core
-  lang_error
-  lang_eval
-  lang_regexp
-  lang_string
-  lexer
-  methods
-  modules
-  parsed_term
-  parser
-  parser_helper
-  pos
-  plug
-  preprocessor
-  profiler
-  repr
-  ref_type
-  runtime
-  runtime_error
-  runtime_term
-  sites
-  startup
-  term
-  term_base
-  term_cache
-  term_custom
-  term_hash
-  term_preprocessor
-  term_reducer
-  term_stdlib
-  term_trim
-  type
-  type_base
-  type_constraints
-  type_custom
-  typechecking
-  typing
-  unifier
-  utils
-  value))
+  xml-light))
