Cleanup that up.

--- a/src/core/optionals/sdl/dune
+++ b/src/core/optionals/sdl/dune
@@ -1,6 +1,6 @@
 (library
  (name liquidsoap_sdl)
- (libraries liquidsoap_sdl_log_level tsdl-image tsdl-ttf liquidsoap_core)
+ (libraries tsdl-image tsdl-ttf liquidsoap_core)
  (library_flags -linkall)
  (wrapped false)
  (optional))
