--- a/tests/media/encoder_multitrack.liq.in
+++ b/tests/media/encoder_multitrack.liq.in
@@ -14,6 +14,60 @@ s = once(s)
 
 clock.assign_new(sync="none",[s])
 
+done = ref(false)
+
+def on_close(filename) =
+  if
+    not done()
+  then
+    done := true
+
+    ojson =
+      process.read(
+        "ffprobe -v quiet -print_format json -show_streams -count_packets #{
+          process.quote(filename)
+        }"
+      )
+
+    let json.parse (parsed :
+      {
+        streams: [
+          {
+            nb_read_packets: string,
+            duration?: string,
+            tags?: { DURATION: string }
+          }
+        ]
+      }
+    ) = ojson
+
+    def duration(s) =
+      if null.defined(s?.duration) then float_of_string(null.get(s?.duration))
+      elsif null.defined(s?.tags) then
+        matches = r/^([\d]+):([\d]+):(.+)/.exec(null.get(s?.tags).DURATION)
+        hours = float_of_string(list.assoc(1, matches))
+        minutes = float_of_string(list.assoc(2, matches))
+        seconds = float_of_string(list.assoc(3, matches))
+        hours*60.*60. + minutes*60. + seconds
+      else
+        0.
+      end
+    end
+
+    if
+      list.for_all(fun (s) ->
+          (duration(s) >= 10.
+        or
+          int_of_string(s.nb_read_packets) > 0), parsed.streams)
+    then
+      test.pass()
+    else
+      test.fail()
+    end
+  end
+end
+
 output.file(
-  fallible=true,on_close=fun (_) -> test.pass(),
+  fallible=true,on_close=on_close,
+  reopen_on_error=fun (_) -> begin test.fail(); null end,
   @FORMAT@,file,s)
