--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ src/tooling/prettier-plugin-liquidsoap/dist/liquidsoap.js
 src/tooling/prettier-plugin-liquidsoap/dist/web.mjs
 src/tooling/prettier-plugin-liquidsoap/dist/node.js
 *.conflicts
+tests/liquidsoap-test-assets
