Make running liquidsoap-test-assets tests optional.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ on:
         type: string
     secrets:
       LIQUIDSOAP_TEST_REPO_TOKEN:
-        required: true
+        required: false
 
 jobs:
   run_tests:
