--- a/opam/liquidsoap.opam
+++ b/opam/liquidsoap.opam
@@ -25,6 +25,7 @@ depends: [
   "camomile" {>= "2.0.0"}
   "uri"
   "menhirLib"
+  "domain_shims"
   "mem_usage" {>= "0.1.1"}
   "metadata" {>= "0.3.0"}
   "magic-mime"
