--- a/tests/media/encoder_audio_video.liq.in
+++ b/tests/media/encoder_audio_video.liq.in
@@ -19,13 +19,6 @@ def on_close(filename) =
   then
     done := true
 
-    ojson =
-      process.read(
-        "ffprobe -v quiet -print_format json -show_streams -count_packets #{
-          process.quote(filename)
-        }"
-      )
-
     let json.parse (parsed :
       {
         streams: [
@@ -37,7 +30,7 @@ def on_close(filename) =
           }
         ]
       }
-    ) = ojson
+    ) = test.ffprobe(count_packets=true, filename)
 
     audio_stream =
       list.find(
