--- a/tests/media/encoder_video_only.liq.in
+++ b/tests/media/encoder_video_only.liq.in
@@ -17,13 +17,6 @@ def on_close(filename) =
   then
     done := true
 
-    ojson =
-      process.read(
-        "ffprobe -v quiet -print_format json -show_streams -count_packets #{
-          process.quote(filename)
-        }"
-      )
-
     let json.parse (parsed :
       {
         streams: [
@@ -35,7 +28,7 @@ def on_close(filename) =
           }
         ]
       }
-    ) = ojson
+    ) = test.ffprobe(count_packets=true, filename)
 
     video_stream =
       list.find(
