--- a/tests/media/stream_audio.liq.in
+++ b/tests/media/stream_audio.liq.in
@@ -25,16 +25,12 @@ def on_close (filename) =
   if not done() then
 	  done := true
 
-	  process.run("sync")
-
-    j = process.read("ffprobe -v quiet -print_format json -show_streams #{process.quote(filename)}")
-
     let json.parse ( parsed: {
       streams: [{
         channels: int,
         sample_rate: string
       }]
-    }) = j
+    }) = test.ffprobe(filename)
 
     let [stream] = parsed.streams
 
