--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -2,15 +2,32 @@ name: Backport
 
 on:
   pull_request_target:
-    types: [closed]
+    types: [closed, labeled]
 
 jobs:
+  notify:
+    if: github.event.action == 'labeled' && startsWith(github.event.label.name, 'backport:')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Comment on PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const label = context.payload.label.name;
+            const branch = label.replace('backport:', '');
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: `Scheduled for backport to \`${branch}\` when this PR is merged.`
+            });
+
   backport:
-    if: github.event.pull_request.merged == true && contains(toJSON(github.event.pull_request.labels.*.name), 'backport:')
+    if: github.event.action == 'closed' && github.event.pull_request.merged == true && contains(toJSON(github.event.pull_request.labels.*.name), 'backport:')
     runs-on: ubuntu-latest
     steps:
       - uses: tibdex/backport@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # Matches labels like "backport:rolling-release-v2.4.x"
+          # Matches labels like "backport:v2.4.x-latest"
           label_pattern: "^backport:(.+)$"
